new models matching causal and noncausal interfaces

--- a/train_simple.ipynb
+++ b/train_simple.ipynb
@@ -10,14 +10,14 @@
     "from contextlib import nullcontext\n",
     "\n",
     "import torch\n",
-    "from torch import nn, optim, Tensor\n",
+    "from torch import nn, Tensor\n",
     "import torch.nn.functional as F\n",
     "\n",
     "import time\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from models import SlowLanguageTransformer\n",
+    "from model import DecoderTransformer, DecoderTransformerConfig\n",
     "\n",
     "if torch.cuda.is_available():\n",
     "    device = \"cuda\"\n",
@@ -39,11 +39,11 @@
    "source": [
     "OUT_DIR = \"out\"\n",
     "\n",
-    "MAX_ITERS = 10\n",
-    "EVAL_INTERVAL = 250\n",
+    "MAX_ITERS = 1000\n",
+    "EVAL_INTERVAL = 1\n",
     "\n",
-    "BLOCK_SIZE = 64\n",
-    "BATCH_SIZE = 2\n",
+    "BLOCK_SIZE = 128\n",
+    "BATCH_SIZE = 256\n",
     "\n",
     "MIN_LR = 1e-4\n",
     "MAX_LR = 1e-5\n",
@@ -105,7 +105,7 @@
     "def block_data(data: Tensor, block_size=BLOCK_SIZE) -> tuple[Tensor, Tensor]:\n",
     "    n_blocks = len(data) - block_size - 1\n",
     "    x = torch.stack([data[i:i + block_size] for i in range(n_blocks)])\n",
-    "    y = torch.stack([data[i + block_size] for i in range(n_blocks)])\n",
+    "    y = torch.stack([data[i:i + block_size] for i in range(1, n_blocks + 1)])\n",
     "    return x, y"
    ]
   },
@@ -157,7 +157,7 @@
     "        loss = F.cross_entropy(logits, by).cpu()\n",
     "        loss_sum += loss.cpu() * len(x)\n",
     "        cnt += len(x)\n",
-    "    return loss_sum / cnt\n"
+    "    return loss_sum / cnt"
    ]
   },
   {
@@ -185,31 +185,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "causal_model = SlowLanguageTransformer(\n",
-    "    n_embed=512,\n",
-    "    n_head=4,\n",
+    "causal_config = DecoderTransformerConfig(\n",
     "    block_size=BLOCK_SIZE,\n",
-    "    n_layer=2,\n",
     "    vocab_size=vocab_size,\n",
-    "    dropout=0,\n",
-    "    bias=True,\n",
+    "    n_layer=2,\n",
+    "    n_head=4,\n",
+    "    n_embd=512,\n",
     "    is_causal=True,\n",
-    ").to(device)\n",
+    ")\n",
     "\n",
-    "causal_optimizer = optim.Adam(causal_model.parameters())\n",
+    "causal_model = DecoderTransformer(causal_config).to(device)\n",
     "\n",
-    "noncausal_model = SlowLanguageTransformer(\n",
-    "    n_embed=512,\n",
-    "    n_head=4,\n",
+    "causal_optimizer = causal_model.configure_optimizers(weight_decay=0.1, learning_rate=MIN_LR, \n",
+    "                                                     betas=(0.9, 0.99), device_type=device)\n",
+    "\n",
+    "noncausal_config = DecoderTransformerConfig(\n",
     "    block_size=BLOCK_SIZE,\n",
-    "    n_layer=2,\n",
     "    vocab_size=vocab_size,\n",
-    "    dropout=0,\n",
-    "    bias=True,\n",
+    "    n_layer=2,\n",
+    "    n_head=4,\n",
+    "    n_embd=512,\n",
     "    is_causal=False,\n",
-    ").to(device)\n",
+    ")\n",
     "\n",
-    "noncausal_optimizer = optim.Adam(noncausal_model.parameters())\n",
+    "noncausal_model = DecoderTransformer(noncausal_config).to(device)\n",
+    "\n",
+    "noncausal_optimizer = causal_model.configure_optimizers(weight_decay=0.1, learning_rate=MIN_LR, \n",
+    "                                                        betas=(0.9, 0.99), device_type=device)\n",
     "\n",
     "models_and_optimizers = [(causal_model, causal_optimizer), (noncausal_model, noncausal_optimizer)]"
    ]
@@ -222,8 +224,15 @@
    "source": [
     "i = 0\n",
     "t0 = time.time()\n",
-    "losses = [[], []]\n",
-    "\n",
+    "losses = [[], []]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "while i < MAX_ITERS:\n",
     "    for x, y in batch_iterate(x_train, y_train):\n",
     "        if i >= MAX_ITERS:\n",
@@ -235,14 +244,20 @@
     "                param_group[\"lr\"] = lr\n",
     "            \n",
     "            with context:\n",
-    "                logits = model(x)\n",
-    "                loss = F.cross_entropy(x, y)\n",
+    "                _, loss = model(x, y, backward=True)\n",
     "\n",
-    "            loss.backward()\n",
     "            optimizer.step()\n",
-    "            optimizer.zero_grad(set_to_none=True)\n",
+    "            optimizer.zero_grad()\n",
     "\n",
     "            losses[k].append(loss.detach().cpu())\n",
+    "        \n",
+    "        if (i + 1) % EVAL_INTERVAL == 0:\n",
+    "            dt = time.time() - t0\n",
+    "            t0 = time.time()\n",
+    "            print(f\"{f'[{i + 1}]':8}\", end=\"\")\n",
+    "            print(f\"causal loss: {np.mean(losses[0][-EVAL_INTERVAL:]):.3f}\", end=\", \")\n",
+    "            print(f\"noncausal loss: {np.mean(losses[0][-EVAL_INTERVAL:]):.3f}\", end=\", \")\n",
+    "            print(f\"time: {dt:.1f}s\")\n",
     "        \n",
     "        i += 1"
    ]
@@ -253,12 +268,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(losses[1], label=\"causal\")\n",
+    "plt.plot(losses[0], label=\"causal\")\n",
     "plt.plot(losses[1], label=\"noncausal\")\n",
     "plt.xlabel(\"Iteration\")\n",
     "plt.ylabel(\"Loss\")\n",
+    "plt.legend()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
