improved noncausal forward with less repeated work

--- a/train_simple.ipynb
+++ b/train_simple.ipynb
@@ -210,8 +210,8 @@
     "\n",
     "noncausal_model = DecoderTransformer(noncausal_config).to(device)\n",
     "\n",
-    "noncausal_optimizer = causal_model.configure_optimizers(weight_decay=0.1, learning_rate=MIN_LR, \n",
-    "                                                        betas=(0.9, 0.99), device_type=device)\n",
+    "noncausal_optimizer = noncausal_model.configure_optimizers(weight_decay=0.1, learning_rate=MIN_LR, \n",
+    "                                                           betas=(0.9, 0.99), device_type=device)\n",
     "\n",
     "models_and_optimizers = [(causal_model, causal_optimizer), (noncausal_model, noncausal_optimizer)]"
    ]
