optimized DecoderTransformerStack forward and improved testing

--- a/train_simple.ipynb
+++ b/train_simple.ipynb
@@ -155,7 +155,7 @@
     "\n",
     "        logits = model(bx)\n",
     "        loss = F.cross_entropy(logits, by).cpu()\n",
-    "        loss_sum += loss.cpu() * len(x)\n",
+    "        loss_sum += loss.cpu().item() * len(x)\n",
     "        cnt += len(x)\n",
     "    return loss_sum / cnt"
    ]
