shakespeare dataset class

--- a/train_simple.ipynb
+++ b/train_simple.ipynb
@@ -6,18 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Generator\n",
     "from contextlib import nullcontext\n",
-    "\n",
-    "import torch\n",
-    "from torch import nn, Tensor\n",
-    "import torch.nn.functional as F\n",
-    "\n",
     "import time\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
     "from model import DecoderTransformer, DecoderTransformerConfig\n",
+    "from shakespeare_dataset import ShakespeareDataset\n",
     "\n",
     "if torch.cuda.is_available():\n",
     "    device = \"cuda\"\n",
@@ -57,86 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"data/shakespeare.txt\", \"r\", encoding=\"utf-8\") as f:\n",
-    "    text = f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chars = sorted(list(set(text)))\n",
-    "vocab_size = len(chars)\n",
-    "\n",
-    "char2int = {c: i for i, c in enumerate(chars)}\n",
-    "int2char = {i: c for i, c in enumerate(chars)}\n",
-    "\n",
-    "\n",
-    "def encode(s: str) -> list[int]:\n",
-    "    return [char2int[c] for c in s if c in char2int]\n",
-    "\n",
-    "\n",
-    "def decode(y: list[int] | np.ndarray | Tensor) -> str:\n",
-    "    return \"\".join([int2char[int(i)] for i in y if int(i) in int2char])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "full_data = torch.tensor(encode(text), dtype=torch.int64)\n",
-    "\n",
-    "val_size = len(full_data) // 10\n",
-    "\n",
-    "train_data = full_data[val_size:]\n",
-    "val_data = full_data[:val_size]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def block_data(data: Tensor, block_size=BLOCK_SIZE) -> tuple[Tensor, Tensor]:\n",
-    "    n_blocks = len(data) - block_size - 1\n",
-    "    x = torch.stack([data[i:i + block_size] for i in range(n_blocks)])\n",
-    "    y = torch.stack([data[i:i + block_size] for i in range(1, n_blocks + 1)])\n",
-    "    return x, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_train, y_train = block_data(train_data)\n",
-    "x_val, y_val = block_data(val_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def batch_iterate(\n",
-    "    x: Tensor, \n",
-    "    y: Tensor, \n",
-    "    batch_size=BATCH_SIZE,\n",
-    "    device=device,\n",
-    ") -> Generator[tuple[Tensor, Tensor], None, None]:\n",
-    "    permutation = torch.from_numpy(np.random.permutation(len(y)))\n",
-    "    for i in range(0, len(y), batch_size):\n",
-    "        idxs = permutation[i:i + batch_size]\n",
-    "        bx = x[idxs].to(device)\n",
-    "        by = y[idxs].to(device)\n",
-    "        yield bx, by"
+    "dataset = ShakespeareDataset(\"data/shakespeare.txt\", block_size=BLOCK_SIZE)\n",
+    "data_loader = DataLoader(dataset, batch_size=BATCH_SIZE, shuffle=True)"
    ]
   },
   {
@@ -146,15 +67,16 @@
    "outputs": [],
    "source": [
     "@torch.no_grad()\n",
-    "def evaluate_loss(model: nn.Module, x: Tensor, y: Tensor, max_iters=100) -> float:\n",
+    "def evaluate_loss(model: DecoderTransformer, data_loader: DataLoader, max_iters=100) -> float:\n",
     "    loss_sum = 0\n",
     "    cnt = 0\n",
-    "    for i, (bx, by) in enumerate(batch_iterate(x, y, BATCH_SIZE)):\n",
+    "    for i, (x, y) in enumerate(data_loader):\n",
     "        if i >= max_iters:\n",
     "            break\n",
-    "\n",
-    "        logits = model(bx)\n",
-    "        loss = F.cross_entropy(logits, by).cpu()\n",
+    "        \n",
+    "        x = x.to(device)\n",
+    "        y = y.to(device)\n",
+    "        _, loss = model(x, y)\n",
     "        loss_sum += loss.cpu().item() * len(x)\n",
     "        cnt += len(x)\n",
     "    return loss_sum / cnt"
@@ -169,10 +91,10 @@
     "def get_lr(iter_num: int) -> float:\n",
     "    if iter_num < WARMUP_ITERS:\n",
     "        return MAX_LR * iter_num / WARMUP_ITERS\n",
-    "\n",
+    "    \n",
     "    if iter_num > LR_DECAY_ITERS:\n",
     "        return MIN_LR\n",
-    "\n",
+    "    \n",
     "    decay_ratio = (iter_num - WARMUP_ITERS) / (LR_DECAY_ITERS - WARMUP_ITERS)\n",
     "    assert 0 <= decay_ratio and decay_ratio <= 1\n",
     "    coeff = 0.5 * (1.0 + np.cos(np.pi * decay_ratio))\n",
@@ -187,7 +109,7 @@
    "source": [
     "causal_config = DecoderTransformerConfig(\n",
     "    block_size=BLOCK_SIZE,\n",
-    "    vocab_size=vocab_size,\n",
+    "    vocab_size=dataset.vocab_size,\n",
     "    n_layer=2,\n",
     "    n_head=4,\n",
     "    n_embd=512,\n",
@@ -201,7 +123,7 @@
     "\n",
     "noncausal_config = DecoderTransformerConfig(\n",
     "    block_size=BLOCK_SIZE,\n",
-    "    vocab_size=vocab_size,\n",
+    "    vocab_size=dataset.vocab_size,\n",
     "    n_layer=2,\n",
     "    n_head=4,\n",
     "    n_embd=512,\n",
@@ -234,9 +156,12 @@
    "outputs": [],
    "source": [
     "while i < MAX_ITERS:\n",
-    "    for x, y in batch_iterate(x_train, y_train):\n",
+    "    for x, y in data_loader:\n",
     "        if i >= MAX_ITERS:\n",
     "            break\n",
+    "        \n",
+    "        x = x.to(device)\n",
+    "        y = y.to(device)\n",
     "\n",
     "        lr = get_lr(i)\n",
     "        for k, (model, optimizer) in enumerate(models_and_optimizers):\n",
