--- a/train_simple.ipynb
+++ b/train_simple.ipynb
@@ -13,7 +13,7 @@
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
     "from model import DecoderTransformer, DecoderTransformerConfig\n",
-    "from shakespeare_dataset import ShakespeareDataset\n",
+    "from shakespeare_data import ShakespeareDataset\n",
     "\n",
     "if torch.cuda.is_available():\n",
     "    device = \"cuda\"\n",
