added imports for colab

--- a/train_icl.ipynb
+++ b/train_icl.ipynb
@@ -2,6 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# uncomment for running in colab\n",
+    "\n",
+    "# from google.colab import drive\n",
+    "# drive.mount(\"/content/drive\")\n",
+    "# %cd /content/drive/MyDrive/noncausal-transformer/"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -43,8 +56,8 @@
    "source": [
     "OUT_DIR = \"out\"\n",
     "\n",
-    "MAX_ITERS = 1000\n",
-    "EVAL_INTERVAL = 1\n",
+    "MAX_ITERS = 2000\n",
+    "EVAL_INTERVAL = 50\n",
     "\n",
     "N_EXAMPLES = 128\n",
     "N_BATCH = 128\n",
