forward_idxs for train_icl notebook

--- a/train_icl.ipynb
+++ b/train_icl.ipynb
@@ -15,17 +15,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "using mps device\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from contextlib import nullcontext\n",
     "import time\n",
@@ -50,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,8 +51,8 @@
     "MAX_ITERS = 2000\n",
     "EVAL_INTERVAL = 50\n",
     "\n",
-    "N_EXAMPLES = 128\n",
-    "N_BATCH = 128\n",
+    "BLOCK_SIZE = 256\n",
+    "BATCH_SIZE = 128\n",
     "\n",
     "MIN_LR = 1e-4\n",
     "MAX_LR = 1e-5\n",
@@ -70,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,14 +87,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_architecture = model_architectures[\"tiny\"]\n",
     "\n",
     "causal_config = DecoderTransformerConfig(\n",
-    "    block_size=N_EXAMPLES * 2,\n",
+    "    block_size=BLOCK_SIZE,\n",
     "    n_layer=model_architecture[\"n_layer\"],\n",
     "    n_head=model_architecture[\"n_head\"],\n",
     "    n_embd=model_architecture[\"n_embd\"],\n",
@@ -111,7 +103,7 @@
     ")\n",
     "\n",
     "noncausal_config = DecoderTransformerConfig(\n",
-    "    block_size=N_EXAMPLES * 2 + 1,\n",
+    "    block_size=BLOCK_SIZE,\n",
     "    n_layer=model_architecture[\"n_layer\"],\n",
     "    n_head=model_architecture[\"n_head\"],\n",
     "    n_embd=model_architecture[\"n_embd\"],\n",
@@ -122,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,9 +188,10 @@
    "outputs": [],
    "source": [
     "t0 = time.time()\n",
+    "forward_idxs = [i for i in range(BLOCK_SIZE) if i % 2 == 1]\n",
     "\n",
     "for i in range(MAX_ITERS):\n",
-    "    data = data_generator.generate_batch(N_BATCH, N_EXAMPLES).to(device)\n",
+    "    data = data_generator.generate_batch(BATCH_SIZE, BLOCK_SIZE // 2).to(device)\n",
     "    x = data[:, :-1, :]\n",
     "    y = data[:, 1:, :]\n",
     "    \n",
@@ -208,7 +201,7 @@
     "            param_group[\"lr\"] = lr\n",
     "        \n",
     "        with context:\n",
-    "            _, loss = model(x, y, backward=True)\n",
+    "            _, loss = model(x, y, backward=True, forward_idxs=forward_idxs)\n",
     "\n",
     "        optimizer.step()\n",
     "        optimizer.zero_grad()\n",
