--- a/train_icl_curriculum.ipynb
+++ b/train_icl_curriculum.ipynb
@@ -58,7 +58,7 @@
     "BATCH_SIZE = 128\n",
     "\n",
     "MIN_LR = 1e-4\n",
-    "MAX_LR = 1e-5\n",
+    "MAX_LR = 1e-4\n",
     "WARMUP_ITERS = 1000\n",
     "LR_DECAY_ITERS = MAX_ITERS - WARMUP_ITERS"
    ]
@@ -231,7 +231,7 @@
     "    for row in pointwise_losses:\n",
     "        row.extend([float(\"nan\")] * (max_len - len(row)))\n",
     "    pointwise_losses = np.array(pointwise_losses)\n",
-    "    np.savez(f\"{OUT_DIR}/results/{results_name}.npz\", )"
+    "    np.savez(f\"{OUT_DIR}/results/{results_name}.npz\", losses=losses, pointwise_losses=pointwise_losses)"
    ]
   },
   {
